--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,57 @@
 @import "tailwindcss";
+
+a {
+  font-weight: bold;
+  color: blue;
+}
+
+i {
+  display: block;
+  padding: 0 0 1rem 0;
+}
+
+header {
+  background-color: lightblue;
+  padding: 0.2rem;
+}
+
+footer {
+  background-color: lightblue;
+  padding: 0.2rem;
+}
+
+main {
+  background-color: lightcoral;
+  padding: 0.2rem;
+}
+
+hr {
+  display: block;
+  color: red;
+  padding: 0.2rem;
+}
+
+div {
+  border: 1px solid black;
+  background-color: rgba(127, 255, 212, 0.5);
+  margin: 0.2rem;
+  padding: 0.2rem;
+
+  .missing {
+    background-color: pink;
+    padding: 1rem;
+  }
+}
+
+form {
+  background-color: lightgray;
+  label {
+    background-color: darkgray;
+  }
+  input {
+    background-color: whitesmoke;
+  }
+  button {
+    background-color: burlywood;
+  }
+}
