--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+.smallIcon {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+}
+
 a {
   display: inline-block;
   padding: 0.2rem;
