--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,6 +4,8 @@ header {
     padding: 0 1rem 0 1rem;
   }
   .HeaderRight {
+    display: flex;
+    justify-content: flex-end;
     width: 100%;
     background-color: green;
   }
