--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,12 +1,24 @@
 header {
   display: flex;
+  padding: 0.2rem;
+  background-color: green;
+
   .HeaderLeft {
-    padding: 0 1rem 0 1rem;
+    a {
+      display: block;
+      padding: 1rem;
+      transition: 0.3s all;
+      min-width: 80px;
+      text-align: center;
+
+      &:hover {
+        background-color: blue;
+      }
+    }
   }
   .HeaderRight {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    background-color: green;
   }
 }
