--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,21 +1,27 @@
 header {
   display: flex;
-  padding: 0.2rem;
-  background-color: orange;
+  align-items: center;
+  padding: 0.4rem;
+  background-color: rgb(255, 165, 0);
 
   .HeaderLeft {
+    padding-left: 1rem;
     a {
       display: block;
       padding: 1rem;
-      transition: 0.3s all;
       min-width: 80px;
       text-align: center;
+      cursor: pointer;
+      transition: 0.3s all;
+      font-size: 1.5rem;
+      color: white;
 
       &:hover {
-        background-color: blue;
+        background-color: rgb(255, 120, 0);
       }
     }
   }
+
   .HeaderRight {
     display: flex;
     justify-content: flex-end;
