--- a/src/components/SignIn/signin.css
+++ b/src/components/SignIn/signin.css
@@ -42,6 +42,7 @@
       display: flex;
       justify-content: center;
       gap: 1rem;
+
       button,
       a {
         width: 50%;
@@ -53,6 +54,7 @@
         border-radius: 1rem;
         box-shadow: 8px 8px 16px darkgray;
         transition: 0.3s all;
+        cursor: pointer;
 
         &:hover {
           background-color: rgba(243, 153, 35, 1);
