--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,16 @@
-@import "tailwindcss";
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-size: 16px;
+  font-family: sans-serif;
+  user-select: none;
+}
+
+a,
+a:visited,
+a:focus,
+a:active {
+  color: black;
+  text-decoration: none;
+}
